--- a/gracias.html
+++ b/gracias.html
@@ -23,7 +23,7 @@
     <p>Tu número de transacción es: <script>document.write(localStorage.getItem('array'))</script></p>
     <p>Compraste <script>document.write(localStorage.getItem('numeroBoletos'))</script> boletos.</p>
     <p>El costo fue de <script>document.write(localStorage.getItem('precio'))</script></p>
-    <button class="boton"><a href="/">Regresar al inicio</a></button>
+    <button class="boton"><a href="/analytics-modificaciones/">Regresar al inicio</a></button>
     <script src="scripts.js"></script>
 </body>
 </html>
