--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
     <button class="boton" onclick="modificar()">
         Modificar
     </button>
-    <script src="scripts.js"></script>
+    <script src="scripts.js">
+        dataLayer.push({
+            'event':'Compra',
+            'ecommerce': {
+                'purchase': {
+                'actionField': {
+                    'id': localStorage.getItem(idTransaccion),
+                    'affiliation':'ADO Internet',
+                    'revenue': precio,
+                },
+                'products': [{
+                    'id': 'Producto 1',
+                    'name': 'Boleto Genérico',
+                    'price': '10',
+                    'brand': 'Boletos ADO',
+                    'category': 'Largo Recorrido',
+                    "quantity": localStorage.getItem(numeroBoletos)
+                }]
+                }
+            }
+            });
+    </script>
 </body>
 </html>
