--- a/index.html
+++ b/index.html
@@ -26,27 +26,6 @@
     <button class="boton" onclick="modificar()">
         Modificar
     </button>
-    <script src="scripts.js">
-        dataLayer.push({
-            'event':'Compra',
-            'ecommerce': {
-                'purchase': {
-                'actionField': {
-                    'id': localStorage.getItem(idTransaccion),
-                    'affiliation':'ADO Internet',
-                    'revenue': precio,
-                },
-                'products': [{
-                    'id': 'Producto 1',
-                    'name': 'Boleto Genérico',
-                    'price': '10',
-                    'brand': 'Boletos ADO',
-                    'category': 'Largo Recorrido',
-                    "quantity": localStorage.getItem(numeroBoletos)
-                }]
-                }
-            }
-            });
-    </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
