--- a/gracias.html
+++ b/gracias.html
@@ -20,7 +20,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <h1>Gracias por tu compra</h1>
-    <p>Tu número de transacción es: <script>document.write(localStorage.getItem('array'))</script></p>
+    <p>Tu número de transacción es: <script>document.write(localStorage.getItem('idTransaccion'))</script></p>
     <p>Compraste <script>document.write(localStorage.getItem('numeroBoletos'))</script> boletos.</p>
     <p>El costo fue de <script>document.write(localStorage.getItem('precio'))</script></p>
     <button class="boton"><a href="/analytics-modificaciones/">Regresar al inicio</a></button>
