--- a/gracias.html
+++ b/gracias.html
@@ -28,8 +28,8 @@
         };
         if(localStorage.getItem('precioCancel') != null){
             document.write('<h1>Tus boletos fueron modificados</h1>' + '<break>');
-            document.write('Tus boletos finales son: ' +localStorage.getItem(boletosPostCancel) + '<break>');
-            document.write('Tu precio final es: ' +localStorage.getItem(precioCancel) + '<break>');
+            document.write('Tus boletos finales son: ' +localStorage.getItem('numeroBoletosCancel') + '<break>');
+            document.write('Tu precio final es: ' +localStorage.getItem('precioCancel') + '<break>');
         }
     </script>
     <button class="boton"><a href="/analytics-modificaciones/">Regresar al inicio</a></button>
