--- a/gracias.html
+++ b/gracias.html
@@ -22,14 +22,14 @@
     <script>
         if(localStorage.getItem('confirmacion') == true){
             document.write('<h1>Gracias por tu compra</h1>' + '<break>');
-            document.write('<p>Tu número de transacción es: ' + localStorage.getItem('idTransaccion') + '<break>');
-            document.write('<p>Compraste ' + localStorage.getItem('numeroBoletos') + ' boletos' + '<break>');
-            document.write('<p>El costo fue de ' + localStorage.getItem('precio') + '<break>'); 
+            document.write('<p>Tu número de transacción es: ' + localStorage.getItem('idTransaccion') + '<br>');
+            document.write('<p>Compraste ' + localStorage.getItem('numeroBoletos') + ' boletos' + '<br>');
+            document.write('<p>El costo fue de ' + localStorage.getItem('precio') + '<br>'); 
         };
         if(localStorage.getItem('precioCancel') != null){
-            document.write('<h1>Tus boletos fueron modificados</h1>' + '<break>');
-            document.write('Tus boletos finales son: ' +localStorage.getItem('numeroBoletosCancel') + '<break>');
-            document.write('Tu precio final es: ' +localStorage.getItem('precioCancel') + '<break>');
+            document.write('<h1>Tus boletos fueron modificados</h1>' + '<br>');
+            document.write('Tus boletos finales son: ' +localStorage.getItem('numeroBoletosCancel') + '<br>');
+            document.write('Tu precio final es: ' +localStorage.getItem('precioCancel') + '<br>');
         }
     </script>
     <button class="boton"><a href="/analytics-modificaciones/">Regresar al inicio</a></button>
